@@ -1,6 +1,7 @@
 2018-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Ensure compatibility with TYPO3 9, drop devLog usage, resolves #13
+	* Add API to store content of distant source into temporary file, resolves #14
 
 2018-12-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
